Fixed overflow errors

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@
   #links {
     display : flex;
     justify-content : space-evenly;
-    margin-top : .5vh;
+    margin : .5vh;
     border-top : 2px solid black;
   }
   
@@ -61,6 +61,7 @@
     color:white;
     opacity : 40%;
     padding : 2;
+    z-index: 99;
   }
   
   .gear {
@@ -241,8 +242,8 @@
 
 footer {
   width : 100vw;
-    height : 8vh;
-    background-color : var(--soft-blue);
-    border : 2px solid black;
-    z-index : 99;
+  background-color : var(--soft-blue);
+  border : 2px solid black;
+  z-index : 99;
 }
+
